kubernetes/apps/self-hosted/esphome/peer/tcproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: esphome-peer
  annotations:
    external-dns.alpha.kubernetes.io/hostname: esphome.internal
spec:
  parentRefs:
    - name: lan
      namespace: kube-system
      sectionName: esphome-peer
  rules:
    - backendRefs:
        - name: esphome
          port: 6055
